[package]
name = "radiyum-pricetwo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "radiyum_pricetwo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
spl-token = "3.3.1"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.18"
bytemuck = { version = "1.4.0" }
primitive-types-solana = "0.1.0"
uint = "0.9.5"
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", features = [
    "no-entrypoint",
    "program",
] }
